# appsec-agent-toolkit

./: .gitignore  GOAL.md  README.md  ROADMAP.md  pyproject.toml
schema/: threat_model_v1.json
scripts/: cleanup.sh  gate.sh  run.sh  tweak.sh
tests/: test_cli.py  test_model.py  test_scaffold.py
threatmodel/: cli.py  model.py  scaffold.py
