[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "appsec-toolkit"
version = "0.1.0"
description = "Small, practical AppSec tools for day-to-day security work."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.scripts]
tm = "threatmodel.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["threatmodel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
